Walk mode: when you press space button too fast, gravity disables #99997

Closed
opened 2022-07-26 15:37:07 +02:00 by Alexandr · 9 comments

System Information
Operating system: Debian testing (Linux)

Blender Version
Broken: 2.80 and later
Worked: 2.79 (kinda worked)

Short description of error
In walk mode, space button teleports you forward to crosshair location. But if you press it too fast, and not waiting for teleporting animation to complete, it looses gravity.
In 2.79 it works fine because it doesn't allow you to teleport until animation is complete, which is not good way to solve this issue. I really like how you can spam Space button and move to another edge of scene in matter of seconds.

Exact steps for others to reproduce the error
Spawn big plane (100x100 meters is enough)
Join walk mode (Shift + `)
Press Tab to enable gravitation
Look at plane and press Space button really fast at least twice.
And now gravitation is disabled.

**System Information** Operating system: Debian testing (Linux) **Blender Version** Broken: 2.80 and later Worked: 2.79 (kinda worked) **Short description of error** In walk mode, space button teleports you forward to crosshair location. But if you press it too fast, and not waiting for teleporting animation to complete, it looses gravity. In 2.79 it works fine because it doesn't allow you to teleport until animation is complete, which is not good way to solve this issue. I really like how you can spam Space button and move to another edge of scene in matter of seconds. **Exact steps for others to reproduce the error** Spawn big plane (100x100 meters is enough) Join walk mode (Shift + `) Press Tab to enable gravitation Look at plane and press Space button really fast at least twice. And now gravitation is disabled.
Author

Added subscriber: @scaled

Added subscriber: @scaled

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
Apparently, due to gravity having to be disabled during "teleport", multiple "teleport" events may confuse the initial status.

I can confirm. Apparently, due to gravity having to be disabled during "teleport", multiple "teleport" events may confuse the initial status.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade self-assigned this 2022-07-27 17:57:14 +02:00

This issue was referenced by 18f0caa6c1

This issue was referenced by 18f0caa6c1173510f3569bcdd60c2c6796fb26b7

This issue was referenced by 2a7b8e78e1

This issue was referenced by 2a7b8e78e192277aaaef5805aa9166365e23e076

This issue was referenced by ead3fc4a07

This issue was referenced by ead3fc4a075d24e3481dfebdc63d54e7143a027c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99997
No description provided.